# rwd-billboard-data

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  song_study_lookup.py
.github/workflows/: test.yml
design/: implementation-plan.md  study-design-srs.md
docs/: 404.html  objects.inv
docs/api/: index.html
docs/context/: index.html
docs/design/architecture/: index.html
docs/design/data-model/: index.html
docs/design/diagrams/: index.html
docs/search/: search_index.json
docs/usage/quickstart/: index.html
site/: context.md  index.md
site/api/: index.md
site/design/: architecture.md  data-model.md  diagrams.md
site/usage/: quickstart.md
src/study_system/: __init__.py
src/study_system/application/: contracts.py  dto.py
src/study_system/application/services/: corpus_service.py  enrichment_service.py  export_service.py  scoring_service.py
src/study_system/config/: logging_config.py  settings.py
src/study_system/domain/: feature_rules.py  models.py  scoring.py
src/study_system/infrastructure/http/: client.py
src/study_system/infrastructure/persistence/: cache_store.py  file_store.py  repositories.py
src/study_system/interfaces/: cli.py
src/study_system/interfaces/commands/: lookup.py
tests/fixtures/: hot-100-sample.csv
tests/integration/: test_enrichment_pipeline.py
tests/unit/: test_cache_store.py  test_chart_source.py  test_cli.py  test_config.py  test_corpus_service.py  test_export_service.py  test_feature_rules.py  test_http_client.py  test_providers.py  test_repositories.py  test_scoring.py  test_scoring_service.py
(+5 files in other folders)
