[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-system"
version = "0.1.0"
description = "Music study data collection, enrichment, scoring, and export system."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Matt Briggs"},
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.0",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
]
dev = [
  "mypy>=1.10",
  "ruff>=0.4",
]

[project.scripts]
song-study = "study_system.interfaces.cli:main"
song-study-lookup = "study_system.interfaces.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["study_system"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["study_system"]
